Fix IOSMAC build https://bugs.webkit.org/show_bug.cgi?id=188934 <rdar://problem/43694979>

Reviewed by Darin Adler.

* platform/network/cf/FormDataStreamCFNet.cpp:



Canonical link: https://commits.webkit.org/204024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235363 268f45cc-cd09-0410-ab3c-d52691b4dbfc